# Blok-201

./: .env.example  .gitignore  Presentation.pptx  README.md  pyproject.toml  requirements.txt
Arduino_dementia/Arduino_dementia/: README_BG.md  platformio.ini
Arduino_dementia/Arduino_dementia/include/: app_config.h  audio_wav.h  dementia_device.h  ftp_uploader.h
Arduino_dementia/Arduino_dementia/src/: HackTues12.code-workspace  audio_wav.cpp  dementia_device.cpp  ftp_uploader.cpp  main.cpp  sd_module_test.cpp
Blok-201/: README.md
Blok-201/server/: pom.xml
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: memory.py  transcripts.py
app/prompts/: extraction_prompt.txt
app/services/: analysis_webhook.py  fallback_extractor.py  gemini_service.py  memory_service.py  transcript_service.py  transcription_service.py
app/web/: index.html
docs/: ESP32_MVP.md
firmware/esp32_mvp/: esp32_mvp.ino
scripts/: run_dev.sh
server/: database.sql  pom.xml
src/ai/: client.py
src/ai/prompts/: system_prompts.py
src/alerts/: engine.py  notifier.py
src/api/: app.py  ws.py
src/api/routes/: alerts.py  (+4 more)
src/config/: settings.py
src/database/: connection.py  schema.sql
src/services/: event_bus.py  fall_detection.py  geofence.py  pipeline.py
tests/: test_ai_client.py  test_app_analysis_webhook.py  test_app_memory_endpoints.py  test_app_schemas.py  test_app_transcribe_endpoint.py  test_app_transcripts_endpoint.py  test_app_ui.py  test_fall_detection.py  test_fallback_extractor.py  test_gemini_service_parsing.py  test_geofence.py  test_ingest_api.py
(+64 files in other folders)
